# Copyright (c) 2021, NVIDIA CORPORATION.

[build-system]

requires = [
    "wheel",
    "setuptools",
    "numba>=0.49",
    "Cython>=0.29,<0.30",
    "numpy",
]

[tool.black]
line-length = 79
target-version = ["py36"]
include = '\.py?$'
exclude = '''
/(
    thirdparty |
    \.eggs |
    \.git |
    \.hg |
    \.mypy_cache |
    \.tox |
    \.venv |
    _build |
    buck-out |
    build |
    dist
)/
'''